# FinanceAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/: analytics.py  categorizer.py  charts.py  cli.py  config.py  database.py  importer.py  models.py
src/utils/: server_utils.py
tests/: local_test.py
