[project]
name = "financeai"
version = "0.1.0"
description = "Financial AI Tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distro==1.9.0",
    "fonttools==4.62.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jiter==0.14.0",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "numpy==2.4.4",
    "openai==2.32.0",
    "packaging==26.1",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "rich==15.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
